[package]
name = "rhun"
version = "0.1.0"
edition = "2021"
license="GPL-3.0-or-later"
authors = ["RHL120 <rhl120@protonmail.com>"]
description = "A simple alternative to sudo / doas"
repository = "https://github.com/RHL120/rhun"
keywords = ["cli", "sudo", "root", "linux", "gnu"]
categories = ["command-line-interface", "command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
libc = "0.2.139"
